--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,6 +144,11 @@ jobs:
     steps:
       - checkout
       - *restore_node_modules_cache
+       - when:
+          condition: 
+            equal: [ *windows-executor, << parameters.os >> ]
+          steps:
+            - run: yarn lint:fix
       - run: yarn build
 
   # push to docker hub
