--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,11 +82,11 @@ jobs:
     steps:
       - checkout
       - *restore_node_modules_cache
-      - when:
-          condition: 
-            equal: [ *windows-executor, << parameters.os >> ]
-          steps:
-            - run: yarn lint:fix
+      # - when:
+      #     condition: 
+      #       equal: [ *windows-executor, << parameters.os >> ]
+      #     steps:
+      #       - run: yarn lint:fix
       - run: yarn lint
   
   # testing
@@ -144,11 +144,11 @@ jobs:
     steps:
       - checkout
       - *restore_node_modules_cache
-      - when:
-          condition: 
-            equal: [ *windows-executor, << parameters.os >> ]
-          steps:
-            - run: yarn lint:fix
+      # - when:
+      #     condition: 
+      #       equal: [ *windows-executor, << parameters.os >> ]
+      #     steps:
+      #       - run: yarn lint:fix
       - run: yarn build
 
   # push to docker hub
